objects/Shift.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_SDO_Demo_Data_Key_Shift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SDO Demo Data Key Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SDO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SDO Demo Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_WEM_Assigned_to_me__c</fullName>
        <description>*What*: Used to indicate if shift is assigned to user.  *Who*: Gregory Johnson. *When*: June 2022</description>
        <formula>ServiceResource.RelatedRecordId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_WEM_In_the_Past__c</fullName>
        <description>*What*: Used to indicate if shift is in the past.  *Who*: Gregory Johnson. *When*: June 2022</description>
        <formula>EndTime &lt; Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In the Past?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Shifts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Shifts</label>
    </listViews>
    <listViews>
        <fullName>My_Shifts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Shifts</label>
    </listViews>
    <listViews>
        <fullName>SDO_Service_WEM_My_Upcoming_Shifts</fullName>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Name</columns>
        <columns>ServiceResource</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDO_Service_WEM_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SDO_Service_WEM_In_the_Past__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Upcoming Shifts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>